add structure for AST

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,10 @@ project(Phun_Lexical_Analyser)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
+        eval.c
         lexer.c
         main.c
-        phun.h parser.c)
+        parser.c
+        phun.h)
 
 add_executable(Phun_Lexical_Analyser ${SOURCE_FILES})
