switch to atom return

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project(Phun_Lexical_Analyser)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
+        phun.h
         eval.c
         lexer.c
         main.c
-        parser.c
-        phun.h)
+        parser.c)
 
 add_executable(Phun_Lexical_Analyser ${SOURCE_FILES})
